# adaption-kirundi-sft-starter

./: .env.example  .gitignore  LICENSE  README.md  environment.lock.yml  environment.yml  pyproject.toml  requirements.txt
configs/: adaption_blueprint.yaml  adaption_run.yaml  evaluation.yaml  language_adherence_prompts.jsonl  project.yaml  tinker_sft_adapted.yaml  tinker_sft_raw.yaml
data/: README.md
docs/: onboarding_feedback.md  product_testing_notes.md
notebooks/: 00_project_overview.ipynb  00_project_overview.py  01_prepare_kirundi_sft_dataset.ipynb  01_prepare_kirundi_sft_dataset.py  02_adapt_dataset_with_adaption.ipynb  02_adapt_dataset_with_adaption.py  03_sft_without_adaption.ipynb  03_sft_without_adaption.py  04_sft_with_adaption.ipynb  04_sft_with_adaption.py  05_compare_results_three.ipynb  05_compare_results_three.py  06_evaluate_language_adherence.ipynb  06_evaluate_language_adherence.py  07_evaluate_kirnews_classification.ipynb  07_evaluate_kirnews_classification.py  README.md
results/: README.md
scripts/: adapt_with_adaption.py  convert_adapted_to_sft.py  evaluate_kirnews_classification.py  evaluate_language_adherence.py  generate_model_responses.py  prepare_kirnews_eval.py  prepare_sft_dataset.py  train_tinker_sft.py
src/kirundi_sft_starter/: __init__.py  adaption.py  data.py  evals.py  tinker_utils.py  utils.py
