[project]
name = "adaption-kirundi-sft-starter"
version = "0.1.0"
description = "Starter workflow for improving low-resource Kirundi SFT data with Adaption and evaluating post-training outcomes."
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
